renamed index_wf to index and changed all links

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <nav role="navigation">Nav
 <ul>
-  <li><a href="index_wf.html">Home</a></li>
+  <li><a href="index.html">Home</a></li>
   <li><a href="portfolio_wf.html">Portfolio</a></li>
   <li><a href="about_wf.html">About</a></li>
 </ul>
